[package]
name = "raiko-agent"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
# External dependencies
alloy-signer-local-v1p0p12 = { package = "alloy-signer-local", version = "1.0.12" }
alloy-primitives-v1p2p0 = { package = "alloy-primitives", version = "1.2.0" }
boundless-market = { version = "1.3.0" }
clap = { version = "4.4", features = ["derive"] }
risc0-ethereum-contracts-boundless = { package = "risc0-ethereum-contracts", version = "3.0.1" }
reqwest = { version = "0.11.22", features = ["json"] }
risc0-zkvm = { version = "3.0.3", features = ["getrandom"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "^1.23", features = ["full"] }
tracing = "0.1"
url = "2.5.0"
thiserror = "1.0"
bincode = "1.3.3"
env_logger = "0.11.8"
# SQLite dependencies for persistent storage
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-rusqlite = "0.5"

# Web framework dependencies
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "limit"] }

# OpenAPI documentation dependencies
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
utoipa-scalar = { version = "0.1", features = ["axum"] }

[dev-dependencies]
ethers-providers = "2.0.10"
log = "0.4.27"
ethers-contract = "2.0.10"
ethers = "2.0.10"
ethers-core = "2.0.10"
tower = "0.5"

# Additional test dependencies

[features]
default = []
enable = []
risc0 = []
bench = []
